fix: UX on link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vercel_ruby</title>
-</head>
-<body>
-  Nothing to see here.
-
-  <a href="https://andrewm.codes" target="_blank" rel="noopener">@andrewmcodes suggest's going to /api!</a>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>vercel_ruby</title>
+  </head>
+  <body>
+    <header>
+      <h1>
+        Nothing to see here!
+      </h1>
+    </header>
+    <main>
+      <p>
+        <a href="https://andrewm.codes" rel="noopener" target="_blank">@andrewmcodes</a>
+        suggest's going to
+        <a href="/api">`/api`</a>!
+      </p>
+    </main>
+  </body>
 </html>
